<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Robber Language</string>
    <string name="action_settings">Settings</string>
    <string name="menuButton_TranslateTo">Translate to</string>
    <string name="menuButton_TranslateFrom">Translate from</string>
    <string name="menuButton_About">About</string>
    <string name="menuButton_Quit">Quit</string>
    <string name="title_activity_translate_to">Translate to Robber Language</string>
    <string name="title_activity_translate_from">Translate from Robber Language</string>
    <string name="title_context_menu">Context Menu</string>
    <string name="title_clear">Clear</string>
    <string name="button_ShowTranslated">Show previous translated text</string>
    <string name="button_Translate">Translate</string>
    <string name="translate_inputText"></string>
    <string name="translate_outputText"></string>
    <string name="translateTo_inputText">Ordinary text to translate:</string>
    <string name="translateFrom_inputText">Robber text to translate:</string>
    <string name="translate_output"></string>
    <string name="translateTo_outputText">Translated ordinary text:</string>
    <string name="translateFrom_outputText">Translated robber text:</string>
    <string name="tvContextHint">Long press on translated text for context menu with clear option, or select clear in the menu</string>
    <string name="menuClear">Clear</string>
    <string name="aboutOk">OK</string>
    <string name="nothingToTranslate">There is nothing to translate!</string>
    <string name="music_on_off">Music On / Off</string>
    <string name="music_settings">Music Settings</string>
     <string name="music_settings_summary">Turn on / off the background music</string>

    <string name="aboutText">The Robber Language is a Swedish language game.
	    It became popular after the books about Kalle Blomkvist by Astrid Lindgren, where the children 
	    use it as a code, both at play and in solving actual crimes. The principle is easy enough.
	     Every consonant (spelling matters, not pronunciation) is doubled, and an o is inserted in-between.
	      Vowels are left intact.</string>
    <string name="title_activity_translate">TranslateActivity</string>

</resources>